# trac_ik

trac_ik_lib/: CMakeLists.txt
trac_ik_lib/include/trac_ik/: trac_ik.hpp
trac_ik_lib/src/: example.cpp  kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
